force-app/main/default/objects/OrgAuthorizationInfo__c.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OauthID__c</fullName>
        <description>Org auth id</description>
        <label>OauthID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgType__c</fullName>
        <label>OrgType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>RefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>UserEmail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>instance_url__c</fullName>
        <label>instance url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>org_name__c</fullName>
        <label>org_name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>OrgAuthorizationInfo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccessToken__c</columns>
        <columns>org_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrgAuthorizationInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgAuthorizationInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>